<resources>
    <string name="app_name">AndroidAppNetClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_api_key">1114982581850464</string>
    <string name="error_facebook_login_string">Login fails</string>
    <string name="anonymous">anonymous</string>
    <string name="email_anonymous">undefined@mail.com</string>

    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="back_again_to_finish">Nhấn Back lần nữa để thoát</string>


    <!--Text to speech-->
    <string name="error_text_to_speech_string">Thiết bị của bạn không hỗ trợ phát âm từ vựng</string>
    <!-- Speech to text -->
    <string name="speech_prompt">Say something&#8230;</string>

    <!-- fucntion -->
    <string name="listening_photos_string">Photos</string>
    <string name="listening_question_response_string">Question - Response</string>
    <string name="listening_short_conversation_string">Short Conversations</string>
    <string name="listening_short_talk">Short Talks</string>
    <string name="reading_incomplete_sentences_string">Incomplete Sentences</string>
    <string name="reading_text_completion_string">Text Completion</string>
    <string name="reading_text_comprehension_string">Comprehension</string>

    <!-- Overview-->
    <string name="overview_toeic_stand">TOEIC - Test Of English for International Communication</string>
    <string name="overview_toeic_introduction">TOEIC là chứng chỉ tiếng Anh quốc tế về giao tiếp dành cho người đi làm không phải là dân sử dụng tiếng Anh làm tiếng mẹ đẻ.</string>
    <string name="overview_toeic_structure">Bài thi TOEIC là một bài thi trắc nghiệm làm trên giấy (paper and pencil, multiple-choice test) gồm có hai thành phần (tổng thời gian làm bài là 120 phút, tổng số câu hỏi là 200 câu) cụ thể như sau:</string>
    <string name="overview_listening">Listening Comprehension (100 câu hỏi, 45 phút làm bài)</string>
    <string name="overview_listening_photographs">Part 1: Photographs – 10 câu hỏi.</string>
    <string name="overview_listening_question_response">Part 2: Question and Response – 30 câu hỏi.</string>
    <string name="overview_listening_short_conversation">Part 3: Short Conversation – 30 câu hỏi hội thoại.</string>
    <string name="overview_listening_short_talk">Part 4: Short Talks – 30 câu hỏi về bài nói.</string>
    <string name="overview_reading">Phần II: Reading (100 câu hỏi, 75 phút làm bài)</string>
    <string name="overview_reading_incomplete_sentences">Part 5: Incomplete Sentences – 40 câu hỏi hoàn thành câu.</string>
    <string name="overview_reading_text_completion">Part 6: Text completion – 12 câu hỏi.</string>
    <string name="overview_reading_conprehension">Part 7: Comprehension – 48 câu hỏi.</string>
    <string name="vocabulary_popup_close_string">Đóng</string>
    <string name="overview_full">PGNlbnRlciBzdHlsZSA9ICJjb2xvcjojMDAwMGZmIj48c3Ryb25nPjxlbT5UT0VJQzxici8+PGJyLz48L2VtPjwvc3Ryb25nPjwvY2VudGVyPg0KPHA+PHN0cm9uZz48ZW0+VGVzdCBPZiBFbmdsaXNoIGZvciBJbnRlcm5hdGlvbmFsIENvbW11bmljYXRpb248YnIvPjwvZW0+PC9zdHJvbmc+PC9wPg0KPHA+VE9FSUMgbMOgIGNo4bupbmcgY2jhu4kgdGnhur9uZyBBbmggcXXhu5FjIHThur8gduG7gSBnaWFvIHRp4bq/cCBkw6BuaCBjaG8gbmfGsOG7nWkgxJFpIGzDoG0ga2jDtG5nIHBo4bqjaSBsw6AgZMOibiBz4butIGThu6VuZyB0aeG6v25nIEFuaCBsw6BtIHRp4bq/bmcgbeG6uSDEkeG6uy48L3A+DQo8cD48ZW0+QsOgaSB0aGkgVE9FSUMgbMOgIG3hu5l0IGLDoGkgdGhpIHRy4bqvYyBuZ2hp4buHbSBsw6BtIHRyw6puIGdp4bqleSAocGFwZXIgYW5kIHBlbmNpbCwgbXVsdGlwbGUtY2hvaWNlIHRlc3QpIGfhu5NtIGPDsyBoYWkgdGjDoG5oIHBo4bqnbiAodOG7lW5nIHRo4budaSBnaWFuIGzDoG0gYsOgaSBsw6AgMTIwIHBow7p0LCB04buVbmcgc+G7kSBjw6J1IGjhu49pIGzDoCAyMDAgY8OidSkgY+G7pSB0aOG7gyBuaMawIHNhdTo8L2VtPjwvcD4NCjx1bD4NCiAgICA8bGk+DQogICAgICAgIDxwPjxzdHJvbmc+TGlzdGVuaW5nIENvbXByZWhlbnNpb248L3N0cm9uZz4gKDEwMCBjw6J1IGjhu49pLCA0NSBwaMO6dCBsw6BtIGLDoGkpPC9wPg0KICAgIDwvbGk+DQo8L3VsPg0KPGJsb2NrcXVvdGU+DQogICAgPHVsPg0KICAgICAgICA8bGk+DQogICAgICAgICAgICA8cD5QYXJ0IDE6IFBob3RvZ3JhcGhzIOKAkyAxMCBjw6J1IGjhu49pLjwvcD4NCiAgICAgICAgPC9saT4NCiAgICAgICAgPGxpPg0KICAgICAgICAgICAgPHA+UGFydCAyOiBRdWVzdGlvbiBhbmQgUmVzcG9uc2Ug4oCTIDMwIGPDonUgaOG7j2kuPC9wPg0KICAgICAgICA8L2xpPg0KICAgICAgICA8bGk+DQogICAgICAgICAgICA8cD5QYXJ0IDM6IFNob3J0IENvbnZlcnNhdGlvbiDigJMgMzAgY8OidSBo4buPaSBo4buZaSB0aG/huqFpLjwvcD4NCiAgICAgICAgPC9saT4NCiAgICAgICAgPGxpPg0KICAgICAgICAgICAgPHA+UGFydCA0OiBTaG9ydCBUYWxrcyDigJMgMzAgY8OidSBo4buPaSB24buBIGLDoGkgbsOzaS48L3A+DQogICAgICAgIDwvbGk+DQogICAgPC91bD4NCjwvYmxvY2txdW90ZT4NCjx1bD4NCiAgICA8bGk+DQogICAgICAgIDxwPjxzdHJvbmc+UmVhZGluZzwvc3Ryb25nPiAoMTAwIGPDonUgaOG7j2ksIDc1IHBow7p0IGzDoG0gYsOgaSk8L3A+DQogICAgPC9saT4NCjwvdWw+DQo8YmxvY2txdW90ZT4NCiAgICA8dWw+DQogICAgICAgIDxsaT4NCiAgICAgICAgICAgIDxwPlBhcnQgNTogSW5jb21wbGV0ZSBTZW50ZW5jZXMg4oCTIDQwIGPDonUgaOG7j2kgaG/DoG4gdGjDoG5oIGPDonUuPC9wPg0KICAgICAgICA8L2xpPg0KICAgICAgICA8bGk+DQogICAgICAgICAgICA8cD5QYXJ0IDY6IFRleHQgY29tcGxldGlvbiDigJMgMTIgY8OidSBo4buPaS48L3A+DQogICAgICAgIDwvbGk+DQogICAgICAgIDxsaT4NCiAgICAgICAgICAgIDxwPlBhcnQgNzogQ29tcHJlaGVuc2lvbiDigJMgNDggY8OidSBo4buPaS48L3A+DQogICAgICAgIDwvbGk+DQogICAgPC91bD4NCjwvYmxvY2txdW90ZT4NCg==</string>

    <!-- Vocabulary -->
    <string name="vocabulary_is_remembered_string">Đã nhớ</string>
    <string name="vocabulary_reach_end_string">Không còn từ đằng sau</string>
    <string name="vocabulary_reach_begining_string">Không còn từ đằng trước</string>
    <string name="vocabulary_example_string">Ví dụ:</string>
    <string name="vocabulary_read_word_prompt_string">"Hãy phát âm từ "</string>
    <string name="vocabulary_words_subject_string">Từ vựng theo chủ đề</string>
    <string name="vocabulary_words_remembered_string">Từ vựng đã ghi nhớ</string>
    <string name="vocabulary_words_practice_string">Bài luyện tập từ vựng</string>

    <string-array name="vocabulary_type">
        <item>Contract</item>
        <item>Marketing</item>
        <item>Warranties</item>
        <item>Business Planning</item>
        <item>Conferences</item>
        <item>Computers and the Internet</item>
        <item>Office Technology</item>
        <item>Office Procedures</item>
        <item>Electronics</item>
        <item>Correspondence</item>
        <item>Job Ads and Recruitment</item>
        <item>Apply and Interviewing</item>
        <item>Hiring and Training</item>
        <item>Salaries and Benefits</item>
        <item>Promotions - Pensions - Awards</item>
        <item>Shopping</item>
        <item>Ordering Supplies</item>
        <item>Shipping</item>
        <item>Invoices</item>
        <item>Inventory</item>
        <item>Banking</item>
        <item>Accounting</item>
        <item>Investments</item>
        <item>Taxes</item>
        <item>Financial Statements</item>
        <item>Property and Departments</item>
        <item>Board Meeting</item>
        <item>Quality Control</item>
        <item>Product Development</item>
        <item>Renting and Leasing</item>
        <item>Selecting a Restaurant</item>
        <item>Eating Out</item>
        <item>Ordering Lunch</item>
        <item>Cooking As A Career</item>
        <item>Events</item>
        <item>General Travel</item>
        <item>Airlines</item>
        <item>Trains</item>
        <item>Hotels</item>
        <item>Car Rentals</item>
        <item>Movies</item>
        <item>Theater</item>
        <item>Music</item>
        <item>Museums</item>
        <item>Media</item>
        <item>Doctor\'s Office</item>
        <item>Dentist\'s Office</item>
        <item>Health</item>
        <item>Hospitals</item>
        <item>Pharmacy</item>
    </string-array>

    <string-array name="grammar_type">
        <item>Lo mo dau</item>
        <item>Bài 1: Thì hiện tại..</item>
        <item>Bài 2: Thì hiện tại..</item>
        <item>Bài 3: Thì hiện tại..</item>
        <item>Bài 4: Thì hiện tại..</item>
        <item>Bài 5: Thì hiện tại..</item>
        <item>Bài 6: Thì hiện tại..</item>
        <item>Bài 7: Thì hiện tại..</item>
        <item>Bài 8: Thì hiện tại..</item>
        <item>Bài 9</item>
        <item>Bài 10</item>
    </string-array>
    <string name="grammar_sample_mean">Nghia cua bai hoc</string>
    <string name="grammar_sample_description">Mô tả tổng quát nội dung bài học bằng tiếng việt</string>
</resources>
