<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <RelativeLayout style="@style/common_item_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_listening_photos"
            style="@style/common_item_image_view"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_listening_photo"
            style="@style/common_item"
            android:layout_toRightOf="@+id/iv_listening_photos"
            android:text="@string/listening_photos_string" />
    </RelativeLayout>

    <RelativeLayout style="@style/common_item_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_listening_question_response"
            style="@style/common_item_image_view"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/common_item"
            android:layout_toRightOf="@+id/iv_listening_question_response"
            android:text="@string/listening_question_response_string" />
    </RelativeLayout>

    <RelativeLayout style="@style/common_item_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_listening_short_conversation"
            style="@style/common_item_image_view"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/common_item"
            android:layout_toRightOf="@+id/iv_listening_short_conversation"
            android:text="@string/listening_short_conversation_string" />
    </RelativeLayout>

    <RelativeLayout style="@style/common_item_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_listening_short_talk"
            style="@style/common_item_image_view"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/common_item"
            android:layout_toRightOf="@+id/iv_listening_short_talk"
            android:text="@string/listening_short_talk" />
    </RelativeLayout>

</LinearLayout>