<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tv_vocabulary_main_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/vocabulary_cover"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <RelativeLayout
        android:id="@+id/rl_vocabulary_general_category"
        style="@style/vocabulary_general_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_vocabulary_general_category"
            style="@style/vocabulary_item_image"
            android:layout_alignParentLeft="true"
            android:src="@drawable/contract" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_vocabulary_general_category"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vocabulary_words_subject_string"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_vocabulary_general_remember"
        style="@style/vocabulary_general_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_vocabulary_general_remember"
            style="@style/vocabulary_item_image"
            android:layout_alignParentLeft="true"
            android:src="@drawable/contract" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_vocabulary_general_remember"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vocabulary_words_remembered_string"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_vocabulary_general_practice"
        style="@style/vocabulary_general_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_vocabulary_general_practice"
            style="@style/vocabulary_item_image"
            android:layout_alignParentLeft="true"
            android:src="@drawable/contract" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_vocabulary_general_practice"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vocabulary_words_practice_string"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>
</LinearLayout>